# crux-demo

./: .gitignore  Cargo.toml  Makefile  README.md  rust-toolchain.toml
.github/workflows/: admin-forbidden-patterns.yml  admin.yml  rust-build.yml  rust-check.yml  rust-format.yml  rust-lint.yml  rust-lock-check.yml  rust-test.yml  rust.yml  swift-format.yml  swift-lint.yml  swift.yml
iOS/: justfile  project.yml
iOS/SimpleCounter/: ContentView.swift  FeedDetailView.swift  LibraryView.swift  SettingsView.swift  SimpleCounter.swift  core.swift
iOS/SimpleCounter.xcodeproj/: project.pbxproj
iOS/SimpleCounter.xcodeproj/project.xcworkspace/xcuserdata/aaxthelm.xcuserdatad/: UserInterfaceState.xcuserstate
iOS/SimpleCounter.xcodeproj/xcuserdata/aaxthelm.xcuserdatad/xcschemes/: xcschememanagement.plist
shared/: Cargo.toml  uniffi.toml
shared/shared.xcodeproj/xcuserdata/aaxthelm.xcuserdatad/xcschemes/: xcschememanagement.plist
shared/src/: app.rs  ffi.rs  lib.rs  placeholder_data.rs
shared_types/: Cargo.toml  build.rs
