[workspace]
members = [
  "shared",
  "shared_types",
]
resolver = "2"

[workspace.package]
authors = ["Alex Axthelm"]
edition = "2021"
license = "MIT"
rust-version = "1.94"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
crux_core = "0.17"
serde = { version = "1.0", features = ["derive"] }
uniffi = "0.29"
