[package]
name = "shared"
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
name = "shared"

[features]
typegen = ["crux_core/typegen"]

[dependencies]
crux_core.workspace = true
serde = { workspace = true, features = ["derive"] }
uniffi.workspace = true

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }

[target.uniffi-bindgen.dependencies]
uniffi = { workspace = true, features = ["cli"] }
